--- a/compose.yaml/compose.yaml
+++ b/compose.yaml/compose.yaml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
-  test-volume:
-    image: siwakorn2345/swarm01-backend:01
+  plex:
+    image: siwakorn2345/plex:sw06
     networks:
      - webproxy
     logging:
@@ -11,17 +11,17 @@ services:
       labels:
         - traefik.docker.network=webproxy
         - traefik.enable=true
-        - traefik.http.routers.whale0011-https.entrypoints=websecure
-        - traefik.http.routers.whale0011-https.rule=Host("whale0011.xops.ipv9.me")
-        - traefik.http.routers.whale0011-https.tls.certresolver=default
-        - traefik.http.services.whale0011.loadbalancer.server.port=80
+        - traefik.http.routers.plex888-https.entrypoints=websecure
+        - traefik.http.routers.plex888-https.rule=Host("plex888.xops.ipv9.me")
+        - traefik.http.routers.plex888-https.tls.certresolver=default
+        - traefik.http.services.plex888.loadbalancer.server.port=32400
       resources:
         reservations:
           cpus: '0.1'
           memory: 6M
         limits:
           cpus: '0.4'
-          memory: 50M
+          memory: 250M
 networks:
   webproxy:
     external: true
